--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@
                     <a class="dropdown-item" href="/AspNetUserRoles">User Roles</a>
                     <a class="dropdown-item" href="/DocumentStatus">Statuses</a>
                     <a class="dropdown-item" href="/DocumentTypes">Doc Types</a>
-                    <a class="dropdown-item" href="/UserLlcs">User Llcs</a>
+                    <a class="dropdown-item" href="/UserLlcs">User LLCs</a>
                     <a class="dropdown-item" href="/Llcs">LLCs</a>
             </div>
         </li>
