Automatically populated DraftedByUserID

--- a/Views/Documents/Delete.cshtml
+++ b/Views/Documents/Delete.cshtml
@@ -57,7 +57,7 @@
             @Html.DisplayNameFor(model => model.DraftedByUserID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DraftedByUserID)
+            @Html.DisplayFor(model => model.DraftedByUser.Email)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateLastUpdated)
