--- a/Views/Documents/Edit.cshtml
+++ b/Views/Documents/Edit.cshtml
@@ -64,16 +64,16 @@
                 </select>
                 <span asp-validation-for="Document.DocumentStatusID" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label asp-for="Document.DraftedByUserID" class="control-label"></label>
                 <input asp-for="Document.DraftedByUserID" class="form-control" />
                 <span asp-validation-for="Document.DraftedByUserID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            </div>-->
+            <!--<div class="form-group">
                 <label asp-for="Document.DateLastUpdated" class="control-label"></label>
                 <input asp-for="Document.DateLastUpdated" class="form-control" />
                 <span asp-validation-for="Document.DateLastUpdated" class="text-danger"></span>
-            </div>
+            </div>-->
             <div class="form-group">
                 <label asp-for="Document.LinkToDocument" class="control-label"></label>
                 <input asp-for="Document.LinkToDocument" class="form-control" />
