--- a/Views/Documents/Index.cshtml
+++ b/Views/Documents/Index.cshtml
@@ -191,7 +191,7 @@
                 @Html.DisplayFor(modelItem => item.DocumentStatus.DocumentStatusName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DraftedByUserID)
+                @Html.DisplayFor(modelItem => item.DraftedByUser.Email)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateLastUpdated)
