--- a/Views/Documents/Details.cshtml
+++ b/Views/Documents/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Llc.LlcName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CniPosRequestorUserID)
+            @Html.DisplayNameFor(model => model.CniPosRequestorUser.Email)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CniPosRequestorUserID)
+            @Html.DisplayFor(model => model.CniPosRequestorUser.Email)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CniContractNumber)
@@ -53,10 +53,10 @@
             @Html.DisplayFor(model => model.DocumentStatus.DocumentStatusName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DraftedByUserID)
+            @Html.DisplayNameFor(model => model.DraftedByUser.Email)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DraftedByUserID)
+            @Html.DisplayFor(model => model.DraftedByUser.Email)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DateLastUpdated)
