--- a/Views/AspNetRoles/Details.cshtml
+++ b/Views/AspNetRoles/Details.cshtml
@@ -9,20 +9,21 @@
 }
 
 <h1>Details</h1>
+
 <div>
-    <h4>@Model.Name</h4>
+    <h4>Role</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Model.Id
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class="col-sm-10">
-            @Model.Name
+            @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
 
