--- a/Views/AspNetRoles/Index.cshtml
+++ b/Views/AspNetRoles/Index.cshtml
@@ -27,8 +27,8 @@
                     @role.Name
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@role.Id">Edit</a>
-                    <a asp-action="Details" asp-route-id="@role.Id">Details</a>
+                    <a asp-action="Edit" asp-route-id="@role.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@role.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@role.Id">Delete</a>
                 </td>
             </tr>
