--- a/Views/Documents/Details.cshtml
+++ b/Views/Documents/Details.cshtml
@@ -11,19 +11,19 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DocumentType.DocumentTypeName)
+            @Html.DisplayNameFor(model => model.DocumentTypeID)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DocumentType.DocumentTypeName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Llc.LlcName)
+            @Html.DisplayNameFor(model => model.LlcID)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Llc.LlcName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CniPosRequestorUser.Email)
+            @Html.DisplayNameFor(model => model.CniPosRequestorUserID)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CniPosRequestorUser.Email)
@@ -47,13 +47,13 @@
             @Html.DisplayFor(model => model.VersionNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DocumentStatus.DocumentStatusName)
+            @Html.DisplayNameFor(model => model.DocumentStatusID)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DocumentStatus.DocumentStatusName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DraftedByUser.Email)
+            @Html.DisplayNameFor(model => model.DraftedByUserID)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DraftedByUser.Email)
