--- a/Views/AspNetUserRoles/Edit.cshtml
+++ b/Views/AspNetUserRoles/Edit.cshtml
@@ -11,8 +11,8 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="EditConfirmed">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <input type="hidden" asp-for="@Model.userRole" />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="@Model.userRole.UserId" name="userId"/>
             <div class="form-group">
                 <label asp-for="userRole.UserId" class="control-label"></label>
                 <select asp-for="userRole.UserId"
