--- a/Views/UserLlcs/Index.cshtml
+++ b/Views/UserLlcs/Index.cshtml
@@ -13,10 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.User.Email)
+                @Html.DisplayNameFor(model => model.UserId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Llc.LlcName)
+                @Html.DisplayNameFor(model => model.LlcId)
             </th>
             <th>Tools</th>
         </tr>
