--- a/Views/AspNetRoles/Create.cshtml
+++ b/Views/AspNetRoles/Create.cshtml
@@ -7,14 +7,14 @@
 
 <h1>Create</h1>
 
-<h4>DocumentStatus</h4>
+<h4>Role</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label for="roleName">Role Name:</label>
+                <label for="roleName">Name</label>
                 <input type="text" class="form-control" id="roleName" name="roleName" value="@Model" />
             </div>
             <div class="form-group">
