--- a/Views/DocumentStatus/Delete.cshtml
+++ b/Views/DocumentStatus/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>DocumentStatus</h4>
+    <h4>Status</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
