--- a/Views/DocumentStatus/Details.cshtml
+++ b/Views/DocumentStatus/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>DocumentStatus</h4>
+    <h4>Status</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
