--- a/Views/UserLlcs/Details.cshtml
+++ b/Views/UserLlcs/Details.cshtml
@@ -7,17 +7,17 @@
 <h1>Details</h1>
 
 <div>
-    <h4>UserLlc</h4>
+    <h4>User-LLC</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Email)
+            @Html.DisplayNameFor(model => model.UserId)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.User.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Llc.LlcName)
+            @Html.DisplayNameFor(model => model.LlcId)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Llc.LlcName)
